--- a/thankyou.html
+++ b/thankyou.html
@@ -273,7 +273,7 @@
 
 			
 			
-      <div>Thank you for signing up for our waitlist.</div>
+      <div style="font-size: 15px; color: #39393b;">Thank you for signing up, you are on our waitlist.</div>
 			
 			
 		</div><!-- end of #seed-cspio-content -->
