--- a/index.html
+++ b/index.html
@@ -296,7 +296,12 @@
     });
 </script>
 	
-	
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>	
 	
 <!-- Google Analytics -->
 </head>
@@ -308,28 +313,6 @@
 						    			    <div id="cspio-description"><div class="page" title="Page 3"><div class="section"><div class="layoutArea"><div class="column"><p>You can’t solve a problem you don’t understand.</p></div></div></div></div><p>Get ready! Something new is coming soon!</p></div>			    				
 
 			
-<!-- Begin Mailchimp Signup Form -->
-<!--
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://ratedforus.us1.list-manage.com/subscribe/post-json?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
--->    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-<!--    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
--->
-
-<!--End mc_embed_signup-->
 			
 	<!-- Begin Mailchimp Signup Form -->
 
@@ -338,7 +321,13 @@
                 <input type="hidden" name="u" value="7f0a0d8be1f47f50a3ee562aa">
                 <input type="hidden" name="id" value="21cb242904">
                 <input type="email" value="" name="EMAIL" class="button border-0 w-100" id="mce-EMAIL" placeholder="email address" required>
-                <input type="submit" class="button button-primary w-100 border-0" value="Send" name="submit" id="mc-embedded-subscribe">
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+		<div style="position: absolute; left: -5000px;" aria-hidden="true">
+			<input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value="">
+		</div>
+    		<div class="clear">
+			<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    		</div>
             </form>
             <div id="thankYouMessage" style="display:none;">
                 <p>Thank you for subscribing!</>
