--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
 	<!-- Tubular -->
 	<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/7f0a0d8be1f47f50a3ee562aa/3bc67bf14c7451ab6d792e9a4.js");</script>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- Header Scripts -->
 	
 	
@@ -273,7 +272,7 @@
         var $this = jQuery(this);
         jQuery.ajax({
             type: "GET", 
-            url: "https://YORLINK.list-manage.com/subscribe/post-json?c=?",
+            url: "https://ratedforus.us1.list-manage.com/subscribe/post-json?c=?",
             data: $this.serialize(),
             dataType: 'json',
             contentType: "application/json; charset=utf-8",
@@ -313,29 +312,26 @@
 						    			    <div id="cspio-description"><div class="page" title="Page 3"><div class="section"><div class="layoutArea"><div class="column"><p>You can’t solve a problem you don’t understand.</p></div></div></div></div><p>Get ready! Something new is coming soon!</p></div>			    				
 
 			
-			
 	<!-- Begin Mailchimp Signup Form -->
-
-        <div id="mc_embed_signup">
-            <form class="mailchimpform" action="https://ratedforus.us1.list-manage.com/subscribe/post" method="POST" target="formaReturning">
-                <input type="hidden" name="u" value="7f0a0d8be1f47f50a3ee562aa">
-                <input type="hidden" name="id" value="21cb242904">
-                <input type="email" value="" name="EMAIL" class="button border-0 w-100" id="mce-EMAIL" placeholder="email address" required>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		<div style="position: absolute; left: -5000px;" aria-hidden="true">
-			<input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value="">
-		</div>
-    		<div class="clear">
-			<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    		</div>
-            </form>
-            <div id="thankYouMessage" style="display:none;">
-                <p>Thank you for subscribing!</>
-            </div>
+<div id="mc_embed_signup">
+<form action="https://ratedforus.us1.list-manage.com/subscribe/post" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="returnFormHere" novalidate>
+    <input type="hidden" name="u" value="7f0a0d8be1f47f50a3ee562aa">
+    <input type="hidden" name="id" value="21cb242904">
+	<div id="mc_embed_signup_scroll">
+		<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
+    		<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    	</div>
+</form>
+	<div id="thankYouMessage" style="display:none;">
+                <p>Thank you, you are now part of our waitlist!</>
         </div>
+</div>
+<iframe name="returnFormHere" style="display:none !important;" frameborder="0"></iframe>
 
-        <iframe name="formaReturning" style="display:none !important;" frameborder="0"></iframe>
-        <!--End mc_embed_signup-->			
+<!--End mc_embed_signup-->		
+			
 						
 			
 		</div><!-- end of #seed-cspio-content -->
