--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 		</div><!-- end of #seed-cspio-content -->
 			</div>
 
-	<script>jQuery(document).ready(function($){$("#cspio-description,#cspio-thankyoumsg").fitVids();});</script>
+	<!-- <script>jQuery(document).ready(function($){$("#cspio-description,#cspio-thankyoumsg").fitVids();});</script> -->
 
 	<!-- Animate -->
 	
