--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 
 <script>
-    jQuery('.myform').submit(function (e) {
+    jQuery('.validate').submit(function (e) {
         var $this = jQuery(this);
         jQuery.ajax({
             type: "GET", 
