--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
 	<!-- Tubular -->
 	<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/7f0a0d8be1f47f50a3ee562aa/3bc67bf14c7451ab6d792e9a4.js");</script>
 
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- Header Scripts -->
 	
 	
@@ -307,7 +309,7 @@
 
 
 <script>
-    jQuery('#mc-embedded-subscribe-form').submit(function (e) {
+    jQuery('.myform').submit(function (e) {
         var $this = jQuery(this);
         jQuery.ajax({
             type: "GET", 
