--- a/index.html
+++ b/index.html
@@ -284,29 +284,38 @@
 						    			    <h1 id="cspio-headline">RatedForUs.com<br>Coming Soon</h1>			    				
 						    			    <div id="cspio-description"><div class="page" title="Page 3"><div class="section"><div class="layoutArea"><div class="column"><p>You can’t solve a problem you don’t understand.</p></div></div></div></div><p>Get ready! Something new is coming soon!</p></div>			    				
 
-			
-	<!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-<form action="https://ratedforus.us1.list-manage.com/subscribe/post" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="returnFormHere" novalidate>
-    <input type="hidden" name="u" value="7f0a0d8be1f47f50a3ee562aa">
-    <input type="hidden" name="id" value="21cb242904">
-	<div id="mc_embed_signup_scroll">
-		<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
-    		<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    	</div>
-</form>
-	<div id="thankYouMessage" style="display:none;">
-                <p>Thank you, you are now part of our waitlist!</>
+
+        <!-- Begin Mailchimp Signup Form -->
+
+        <div id="mc_embed_signup">
+            <form class="mailchimpform" action="https://ratedforus.us1.list-manage.com/subscribe/post" method="POST" target="formaReturning">
+                <input type="hidden" name="u" value="7f0a0d8be1f47f50a3ee562aa">
+                <input type="hidden" name="id" value="21cb242904">
+		<div class="mc-field-group">
+			<label for="mce-EMAIL">Email Address </label>
+			<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+		</div>
+                <input type="submit" class="button button-primary w-100 border-0" value="Send" name="submit" id="mc-embedded-subscribe">
+            </form>
+            <div id="thankYouMessage" style="display:none;">
+                <p>Thank you for subscribing!</>
+            </div>
         </div>
-</div>
-<iframe name="returnFormHere" style="display:none !important;" frameborder="0"></iframe>
 
-<!--End mc_embed_signup-->		
+        <iframe name="formaReturning" style="display:none !important;" frameborder="0"></iframe>
+        <!--End mc_embed_signup-->
 
-		<!-- #secondary -->
 
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    
+	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    	<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
+    	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+
+<!--End mc_embed_signup-->
+		
 
 <script>
     jQuery('.myform').submit(function (e) {
@@ -334,7 +343,10 @@
         });
         return false;
     });
-</script>
+</script>	
+	
+		<!-- #secondary -->
+
 						
 			
 		</div><!-- end of #seed-cspio-content -->
