--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
 <div id="mc_embed_signup">
 <form action="https://ratedforus.us1.list-manage.com/subscribe/post-json?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+		<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+		<div id="mce-responses" class="clear">
+			<div class="response" id="mce-error-response" style="display:none"></div>
+			<div class="response" id="mce-success-response" style="display:none"></div>
+		</div> 
+    	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    	<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
+    	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 <div id="thankYouMessage" style="display:none;">
@@ -122,21 +125,22 @@
                         message = "You're already subscribed. Thank you.";
                     }
 
-					jQuery('#thankYouMessage').css("display","block");
-                    jQuery('#thankYouMessage').text(data.msg.substr(0, data.msg.indexOf('<')));
+					jQuery('#mce-error-response').css("display","block");
+                    jQuery('#mce-error-response').text(data.msg.substr(0, data.msg.indexOf('<')));
 
-                    jQuery('#thankYouMessage').html(message);
+                    jQuery('#mce-error-response').html(message);
 
                 } else {
-                	jQuery('#thankYouMessage').html("Thank you!<br>You must confirm the subscription in your inbox.");
+                	jQuery('#mce-success-response').html("Thank you!<br>You must confirm the subscription in your inbox.");
                 	jQuery('#mc-embedded-subscribe-form').hide();
-                    jQuery('#thankYouMessage').css("display","block");
-                    jQuery('#thankYouMessage').text(data.msg);
+                    jQuery('#mce-success-response').css("display","block");
+                    jQuery('#mce-success-response').text(data.msg);
                 }
             }
         });
     }
-		
+
+
 		
 		function resize(){ $('head').append("<style id='form-style' type='text/css'></style>"); $('#form-style').html('.cspio .input-group-btn, .cspio .input-group{display:block;width:100%;}.cspio #cspio-subscribe-btn{margin-left:0;width:100%;display:block;}.cspio .input-group .form-control:first-child, .cspio .input-group-addon:first-child, .cspio .input-group-btn:first-child>.btn, .cspio .input-group-btn:first-child>.dropdown-toggle, .cspio .input-group-btn:last-child>.btn:not(:last-child):not(.dropdown-toggle) {border-bottom-right-radius: 4px;border-top-right-radius: 4px;}.cspio .input-group .form-control:last-child, .cspio .input-group-addon:last-child, .cspio .input-group-btn:last-child>.btn, .cspio .input-group-btn:last-child>.dropdown-toggle, .cspio .input-group-btn:first-child>.btn:not(:first-child) {border-bottom-left-radius: 4px;border-top-left-radius: 4px;}'); }
 				$('#cspio-content').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){ var width = $('#cspio-field-wrapper').width(); 
