--- a/index.html
+++ b/index.html
@@ -67,78 +67,65 @@
 				<p>Get ready! Something new is coming soon!</p>
 			</div>
 			
+			
 <!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-<form action="https://ratedforus.us1.list-manage.com/subscribe/post-json?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
 
-<!--End mc_embed_signup-->
+        <div id="mc_embed_signup">
+            <form class="mailchimpform" action="https://ratedforus.us1.list-manage.com/subscribe/post-json?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904" method="POST" target="formaReturning">
+                <input type="email" value="" name="EMAIL" class="button border-0 w-100" id="mce-EMAIL" placeholder="email address"
+                    required>
+                <input style="display:none" type="checkbox" value="1" name="group[16169][1]" id="mce-group[16169]-16169-0" checked>
 
+                <input type="submit" class="button button-primary w-100 border-0" value="Send" name="submit" id="mc-embedded-subscribe">
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
+   				 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </form>
+            <div id="thankYouMessage" style="display:none;">
+                <p>Thank you for subscribing!</>
+            </div>
+        </div>
 
+        <iframe name="formaReturning" style="display:none !important;" frameborder="0"></iframe>
+        <!--End mc_embed_signup-->			
+			
+			
 
 		</div><!-- end of #seed-cspio-content --> 
 	</div>
 
-		
-		
-		<script> 
-		
-		$("#mc-embedded-subscribe-form").submit(function(e){
-			e.preventDefault();
-			submitSubscribeForm($("#mc-embedded-subscribe-form"));
-		});
-		
-		function submitSubscribeForm($form, $resultElement) {
-        	$.ajax({
-            type: "GET",
+
+
+<script>
+    jQuery('#mc-embedded-subscribe-form').submit(function (e) {
+        var $this = jQuery(this);
+        jQuery.ajax({
+            type: "GET", 
             url: $form.attr("action"),
-            data: $form.serialize(),
-            cache: false,
-            dataType: "jsonp",
-            jsonp: "c",
+            data: $this.serialize(),
+            dataType: 'json',
             contentType: "application/json; charset=utf-8",
-
-            error: function(error){},
-
-            success: function(data){
+            error: function (err) {
+                alert("Could not connect to the registration server.");
+            },
+            success: function (data) {
                 if (data.result != "success") {
-                    var message = data.msg || "Sorry. Unable to subscribe. Please try again later.";
-
-                    if (data.msg && data.msg.indexOf("already subscribed") >= 0) {
-                        message = "You're already subscribed. Thank you.";
-                    }
-
-					jQuery('#mce-error-response').css("display","block");
-                    jQuery('#mce-error-response').text(data.msg.substr(0, data.msg.indexOf('<')));
-
-                    jQuery('#mce-error-response').html(message);
-
+                    jQuery('#thankYouMessage').css("display","block");
+                    jQuery('#thankYouMessage').text(data.msg.substr(0, data.msg.indexOf('<')));
                 } else {
-                	jQuery('#thankYouMessage').html("Thank you, you are not part of our waitlist!");
-                	jQuery('#mce-EMAIL').hide();
-                	jQuery('#mc-embedded-subscribe').hide();
-                    jQuery('#mce-success-response').css("display","block");
-                    jQuery('#mce-success-response').text(data.msg);
+                    jQuery('.mailchimpform').hide();
+                    jQuery('#thankYouMessage').css("display","block");
+                    jQuery('#thankYouMessage').text(data.msg);
+
                 }
             }
         });
-    }
-
-
+        return false;
+    });
+</script>
+		
+		
+		<script> 
 		
 		function resize(){ $('head').append("<style id='form-style' type='text/css'></style>"); $('#form-style').html('.cspio .input-group-btn, .cspio .input-group{display:block;width:100%;}.cspio #cspio-subscribe-btn{margin-left:0;width:100%;display:block;}.cspio .input-group .form-control:first-child, .cspio .input-group-addon:first-child, .cspio .input-group-btn:first-child>.btn, .cspio .input-group-btn:first-child>.dropdown-toggle, .cspio .input-group-btn:last-child>.btn:not(:last-child):not(.dropdown-toggle) {border-bottom-right-radius: 4px;border-top-right-radius: 4px;}.cspio .input-group .form-control:last-child, .cspio .input-group-addon:last-child, .cspio .input-group-btn:last-child>.btn, .cspio .input-group-btn:last-child>.dropdown-toggle, .cspio .input-group-btn:first-child>.btn:not(:first-child) {border-bottom-left-radius: 4px;border-top-left-radius: 4px;}'); }
 				$('#cspio-content').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){ var width = $('#cspio-field-wrapper').width(); 
