--- a/index.html
+++ b/index.html
@@ -72,16 +72,12 @@
 
         <div id="mc_embed_signup">
             <form class="mailchimpform" action="https://ratedforus.us1.list-manage.com/subscribe/post-json?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904" method="POST" target="formaReturning">
-                <input type="email" value="" name="EMAIL" class="button border-0 w-100" id="mce-EMAIL" placeholder="email address"
-                    required>
-                <input style="display:none" type="checkbox" value="1" name="group[16169][1]" id="mce-group[16169]-16169-0" checked>
-
-                <input type="submit" class="button button-primary w-100 border-0" value="Send" name="submit" id="mc-embedded-subscribe">
+                <input type="email" value="" name="EMAIL" class="button" id="mce-EMAIL" placeholder="email address" required>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
    				 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </form>
-            <div id="thankYouMessage" style="display:none;">
+            <div id="thankYouMessage" class="thankYouMessage" style="display:none;">
                 <p>Thank you for subscribing!</>
             </div>
         </div>
@@ -110,12 +106,14 @@
             },
             success: function (data) {
                 if (data.result != "success") {
-                    jQuery('#thankYouMessage').css("display","block");
-                    jQuery('#thankYouMessage').text(data.msg.substr(0, data.msg.indexOf('<')));
+                    jQuery('.thankYouMessage').css("display","block");
+                    jQuery('.thankYouMessage').text(data.msg.substr(0, data.msg.indexOf('<')));
+                    alert("failed");
                 } else {
                     jQuery('.mailchimpform').hide();
-                    jQuery('#thankYouMessage').css("display","block");
-                    jQuery('#thankYouMessage').text(data.msg);
+                    jQuery('.thankYouMessage').css("display","block");
+                    jQuery('.thankYouMessage').text(data.msg);
+                    alert("success");
 
                 }
             }
