--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 .countdown_section, .cspio .progress-bar { -webkit-box-shadow: none; box-shadow: none; } 
 .cspio input, .cspio input:focus { -webkit-box-shadow: none !important; box-shadow: none !important; }
 
-input.email {
+#mc_embed_signup input.email {
 font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
 font-size: 15px;
 border: 1px solid #ABB0B2;
@@ -90,7 +90,7 @@ vertical-align: top;
 
         <div id="mc_embed_signup">
             <form class="mailchimpform" action="https://ratedforus.us1.list-manage.com/subscribe/post-json?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904" method="POST" target="formaReturning">
-                <input type="email" value="" name="EMAIL" class="button" id="mce-EMAIL" placeholder="email address" required>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
    				 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
