--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ vertical-align: top;
             url: "https://ratedforus.us1.list-manage.com/subscribe/post-jsonp?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904",
             data: $this.serialize(),
             dataType: 'jsonp',
-            jsonp: 'c';
+            jsonp: 'c',
             contentType: "application/json; charset=utf-8",
             error: function (err) {
                 alert("Could not connect to the registration server.");
