--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@ vertical-align: top;
 <!-- Begin Mailchimp Signup Form -->
 
         <div id="mc_embed_signup">
-            <form id="mailchimpform" action="https://ratedforus.us1.list-manage.com/subscribe/post?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904" method="POST" target="formaReturning">
+            <form id="mailchimpform" action="https://ratedforus.us1.list-manage.com/subscribe/post" method="POST" target="formaReturning">
+                <input type="hidden" name="u" value="7f0a0d8be1f47f50a3ee562aa">
+                <input type="hidden" name="id" value="21cb242904">
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
    				 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
@@ -115,10 +118,9 @@ vertical-align: top;
         var $this = jQuery(this);
         $.ajax({
             type: "GET", 
-            url: "https://ratedforus.us1.list-manage.com/subscribe/post-jsonp?u=7f0a0d8be1f47f50a3ee562aa&amp;id=21cb242904",
+            url: "https://ratedforus.us1.list-manage.com/subscribe/post-json?c=?",
             data: $this.serialize(),
-            dataType: 'jsonp',
-            jsonp: 'c',
+            dataType: 'json',
             contentType: "application/json; charset=utf-8",
             error: function (err) {
                 alert("Could not connect to the registration server.");
