--- a/index.html
+++ b/index.html
@@ -40,21 +40,7 @@
 .cspio input, .cspio input:focus { -webkit-box-shadow: none !important; box-shadow: none !important; }
 
 #mc_embed_signup input.email {
-font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
-font-size: 15px;
-border: 1px solid #ABB0B2;
--webkit-border-radius: 3px;
--moz-border-radius: 3px;
-border-radius: 3px;
-color: #343434;
-background-color: #fff;
-box-sizing: border-box;
-height: 32px;
-padding: 0px 0.4em;
-display: inline-block;
-margin: 0;
-width: 350px;
-vertical-align: top;
+	font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif; font-size: 15px; border: 1px solid #ABB0B2; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; color: #343434; background-color: #fff; box-sizing: border-box; height: 32px; padding: 0px 0.4em; display: inline-block; margin: 0; width: 350px; vertical-align: top;
 }
 </style> 
 
@@ -92,11 +78,10 @@ vertical-align: top;
             <form id="mailchimpform" action="https://ratedforus.us1.list-manage.com/subscribe/post" method="POST" target="formaReturning">
                 <input type="hidden" name="u" value="7f0a0d8be1f47f50a3ee562aa">
                 <input type="hidden" name="id" value="21cb242904">
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required style='font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif; font-size: 15px; border: 1px solid #ABB0B2; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; color: #343434; background-color: #fff; box-sizing: border-box; height: 32px; padding: 0px 0.4em; display: inline-block; margin: 0; width: 350px; vertical-align: top;'>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
-   				 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+   				 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style='font-size: 13px; border: none; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; letter-spacing: .03em; color: #fff; background-color: #aaa; box-sizing: border-box; height: 32px; line-height: 32px; padding: 0 18px; display: inline-block; margin: 0; transition: all 0.23s ease-in-out 0s;'></div>
             </form>
             <div id="thankYouMessage" class="thankYouMessage" style="display:none;">
                 <p>Thank you for subscribing!</>
@@ -129,12 +114,10 @@ vertical-align: top;
                 if (data.result != "success") {
                     $('#thankYouMessage').css("display","block");
                     $('#thankYouMessage').text(data.msg.substr(0, data.msg.indexOf('<')));
-                    alert("failed");
                 } else {
                     $("#mailchimpform").hide();
                     $("#thankYouMessage").css("display","block");
                     $('#thankYouMessage').text(data.msg);
-                    alert("success");
 
                 }
             }
