--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
 
 <!-- Header Scripts -->
 <!-- Google Analytics --> 
+
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
 </head> 
 
 <body> 
@@ -126,9 +133,7 @@
         </div>
 
         <iframe name="formaReturning" style="display:none !important;" frameborder="0"></iframe>
-        <!--End mc_embed_signup-->			
-			
-			
+        <!--End mc_embed_signup-->						
 
 		</div><!-- end of #seed-cspio-content --> 
 	</div>
