--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 } else {
                     $("#mailchimpform").hide();
                     $("#thankYouMessage").css("display","block");
-                    $('#thankYouMessage').text(data.msg);
+                    $('#thankYouMessage').text("Thank you, you have been added to our waitlist!"");
 
                 }
             }
