--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7f0a0d8be1f47f50a3ee562aa_21cb242904" tabindex="-1" value=""></div>
    				 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </form>
-            <div id="thankYouMessage" class="thankYouMessage" style="display:none;">
+            <div id="thankYouMessage" class="thankYouMessage" style="display:none; color: #39393b; font-weight: 100; font-style: normal;">
                 <p>Thank you, you have been added to our waitlist!</>
             </div>
         </div>
